# datetime

./: DatetimePlugin.podspec  README.md
.github/workflows/: datetime-interface-cd.yaml  datetime-interface-ci.yaml  datetime-plugin-js-cd.yaml  datetime-plugin-js-ci.yaml  datetime-plugin-swift-ci.yaml  datetime-rs-cd.yaml  datetime-rs-ci.yaml
implementations/js/: .eslintrc.js  README.md  package.json  polywrap.graphql  polywrap.yaml  schema.graphql
implementations/js/src/: index.ts
implementations/js/src/__tests__/: e2e.spec.ts
implementations/rs/: Cargo.toml  package.json  polywrap.yaml
implementations/rs/src/: lib.rs  schema.graphql
implementations/rs/src/wrap/: module.rs  types.rs  wrap.info.rs
implementations/swift/: .gitignore  DatetimePlugin.podspec  Package.resolved  Package.swift  polywrap.yaml
implementations/swift-datetime/: Package.resolved  Package.swift
implementations/swift-datetime/Sources/DatetimePlugin/: DatetimePlugin.swift
implementations/swift-datetime/Tests/DatetimePluginTests/: DatetimePluginTests.swift
implementations/swift/Source/: DatetimePlugin.swift
implementations/swift/Source/wrap/: Module.swift
implementations/swift/Tests/: DatetimePluginTests.swift
interface/: README.md  URI.txt  deployment.json  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
interface/resources/: README.md
plugin/: package.json  polywrap.plugin.yaml  tsconfig.json
plugin/src/: index.ts
plugin/src/__tests__/: e2e.spec.ts
wrapper/: package.json  polywrap.yaml
wrapper/tests/:  e2e.test.ts
