[package]
name = "polywrap_datetime_plugin"
version = "0.0.1-beta.4"
license = "MIT"
description = "Polywrap rust datetime plugin"
edition = "2021"

[dependencies]
polywrap_core = { version = "0.1.6-beta" }
polywrap_plugin = { version = "0.1.6-beta" }
polywrap_msgpack = { version = "0.1.6-beta" }
polywrap_resolvers = { version = "0.1.6-beta" }
wrap_manifest_schemas = { version = "0.1.6-beta" }

chrono = "0.4"
serde = {version = "1.0.145", features = ["derive"]}

[dev-dependencies]
polywrap_client = { version = "0.1.6-beta" }
